# Value-Based-Care-Performance-Analytics

./: README.md  app.py  pyproject.toml  requirements.txt
data/: contracts.csv  encounters.csv  patients.csv  quality_measures.csv
